--- a/src/index.scss
+++ b/src/index.scss
@@ -4,10 +4,49 @@
   background: var(--divider);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  padding-top: 5rem;
+  .sidebar {
+    flex: 0 0 25rem;
+    padding: 0 2rem 2rem 2rem;
+    select {
+      width: 100%;
+      margin-bottom: 2rem;
+      border-radius: 0.3rem;
+      background: white;
+      border: 0;
+      outline: 0;
+      padding: 1rem;
+      box-shadow: var(--box-shadow);
+    }
+    .categories {
+      padding: 2rem;
+      background: white;
+      border-radius: 0.3rem;
+      box-shadow: var(--box-shadow);
+      li {
+        margin: 1rem;
+        transition: color 0.2s;
+        cursor: pointer;
+        &:hover {
+          color: var(--primary);
+          strong {
+            color: var(--primary);
+          }
+        }
+      }
+      .active {
+        color: var(--primary);
+        font-weight: 700;
+        strong {
+          color: var(--primary);
+        }
+      }
+    }
+  }
   .articles-container {
-    max-width: 800px;
-    width: 100%;
+    max-width: 80rem;
+    flex: 1;
     margin: 5rem 0 10rem 0;
     .article {
       background: white;
